# delamain

./: Dockerfile  Justfile  README.md  pyproject.toml
.github/workflows/: build.yaml
delamain/: __init__.py
